added normalization to combat numerical underflow

--- a/conin/mediation_variables/apt_experiments.ipynb
+++ b/conin/mediation_variables/apt_experiments.ipynb
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 415,
    "id": "5243c216-c922-430e-9df6-715e95862c05",
    "metadata": {},
    "outputs": [],
@@ -1182,47 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
-   "id": "adf18f93-6cd0-4caa-bb77-e3c9dfae4259",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opt_state_list, opt_augstateix_list = ahlp.Viterbi_torch_list(tier_apt, dummy_cst_list, combined_emits, dummy_sat, time_hom = True, dtype = torch.float16, device = 'cuda:0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 373,
-   "id": "39214a45-a882-438e-9222-063461fa8d53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None),\n",
-       " ('PRE', None)]"
-      ]
-     },
-     "execution_count": 373,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opt_state_list[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 422,
    "id": "6f8ee43d-1459-458e-9373-76391ed7525b",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 423,
    "id": "88bbfa95-83da-4dba-8963-ea7a47804671",
    "metadata": {},
    "outputs": [
@@ -1248,58 +1208,8 @@
        " ('PRE', None),\n",
        " ('PRE', None),\n",
        " ('PRE', None),\n",
-       " ('PRE', None)]"
-      ]
-     },
-     "execution_count": 371,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opt_state_list[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 354,
-   "id": "547e2f22-3834-4aee-b881-b1e6812fe8b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('PRE', None),\n",
        " ('PRE', None),\n",
-       " ('IA', ('S', 'postfix/local')),\n",
-       " ('WAIT_IA', None),\n",
-       " ('EX', ('HE', 'img/post')),\n",
-       " ('WAIT_EX', None),\n",
-       " ('WAIT_EX', None),\n",
-       " ('WAIT_EX', None),\n",
-       " ('WAIT_EX', None),\n",
-       " ('EX', ('S', 'postfix/local'))]"
-      ]
-     },
-     "execution_count": 354,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opt_state_list[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
-   "id": "a508191d-0d3a-4148-b01c-8abdff7684a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('PRE', None),\n",
+       " ('PRE', None),\n",
        " ('PRE', None),\n",
        " ('PRE', None),\n",
        " ('PRE', None),\n",
@@ -1311,48 +1221,577 @@
        " ('PRE', None)]"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opt_state_list[:10]"
+    "opt_state_list[:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
-   "id": "1a84c9dc-73a2-4d13-94fe-a62ff34ae345",
+   "execution_count": 525,
+   "id": "dc3d828b-9f30-481e-ab71-32df7dc4e1a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'apt_helper' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_helper.py'>"
+      ]
+     },
+     "execution_count": 525,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(ahlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 565,
+   "id": "5b7a1141-9dd1-4d39-b2c1-43d2cdf6c366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
+    "apt_truth_states, apt_truth_emits = apt_truth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 566,
+   "id": "adf18f93-6cd0-4caa-bb77-e3c9dfae4259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_state_list, _, val, ix_tracker = ahlp.Viterbi_torch_list(tier_apt, dummy_cst_list, apt_truth_emits, dummy_sat, time_hom = True, dtype = torch.float32, device = 'cuda:0', debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 563,
+   "id": "2281ac80-c64b-4f31-9958-b08396d5f9b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for t in range(val.shape[0]):\n",
+    "#     print(val[t].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 567,
+   "id": "39214a45-a882-438e-9222-063461fa8d53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('PRE', None),\n",
-       " ('PRE', None),\n",
        " ('IA', ('S', 'postfix/local')),\n",
-       " ('WAIT_IA', None),\n",
        " ('EX', ('HE', 'img/post')),\n",
        " ('WAIT_EX', None),\n",
        " ('WAIT_EX', None),\n",
        " ('WAIT_EX', None),\n",
+       " ('EX', ('HI', 'img/post')),\n",
        " ('WAIT_EX', None),\n",
-       " ('EX', ('S', 'postfix/local')),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('EX', ('V', 'access/bob')),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None)]"
+      ]
+     },
+     "execution_count": 567,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_state_list[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
+   "id": "6cef16b6-cd7b-46be-aa49-45068b829e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_state_list = mv.mv_Viterbi(apt_truth_emits, tier_apt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 569,
+   "id": "979bc675-a08e-4cd4-a9b5-840235bdce59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('PRE', None),\n",
+       " ('IA', ('S', 'postfix/local')),\n",
        " ('EX', ('HE', 'img/post')),\n",
        " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('WAIT_EX', None),\n",
+       " ('EX', ('HI', 'img/post')),\n",
        " ('WAIT_EX', None),\n",
        " ('WAIT_EX', None),\n",
        " ('WAIT_EX', None)]"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 569,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opt_state_list[:15]"
+    "opt_state_list[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "id": "e24ec046-770b-4c3b-864f-8999470ba7a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pure_hidden, pure_emission = ahlp.simulation_apt(apt_hmm, ix_list = None, emit_inhom = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "id": "1a84c9dc-73a2-4d13-94fe-a62ff34ae345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_state_list, opt_augstateix_list = ahlp.Viterbi_torch_list(tier_apt, cst_list, pure_emission, sat, time_hom = True, dtype = torch.float16, device = 'cuda:0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "id": "411e732c-8bb4-41f8-82ee-624d0d8e4e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('PRE', None),\n",
+       " ('PRE', None),\n",
+       " ('PRE', None),\n",
+       " ('PRE', None),\n",
+       " ('IA', ('S', 'postfix/local')),\n",
+       " ('WAIT_IA', None),\n",
+       " ('WAIT_IA', None),\n",
+       " ('WAIT_IA', None),\n",
+       " ('WAIT_IA', None),\n",
+       " ('WAIT_IA', None)]"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_state_list[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "id": "6836038e-6581-4039-9806-72619800a309",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " ('HE', 'img/post'),\n",
+       " ('V', 'access/bob'),\n",
+       " ('V', 'access/bob'),\n",
+       " None,\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('V', 'access/sally'),\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " ('HI', 'img/query'),\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " ('V', 'access/bob'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('V', 'access/bob'),\n",
+       " ('HI', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " ('V', 'access/bob'),\n",
+       " None,\n",
+       " ('V', 'access/bob'),\n",
+       " None,\n",
+       " ('HI', 'img/post'),\n",
+       " ('HI', 'usr/query'),\n",
+       " ('HE', 'img/post'),\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " ('HE', 'img/post'),\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " ('DS', 'syslog/ls'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'img/post'),\n",
+       " ('V', 'access/sally'),\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " ('DS', 'syslog/ls'),\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " ('HI', 'img/post'),\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_emits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "id": "ad8380b5-ec59-49ec-9a54-31687035459d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('S', 'postfix/local'),\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/ls'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'usr/query'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " ('DS', 'syslog/nano'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HI', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/post'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " ('HE', 'img/query'),\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pure_emission"
    ]
   },
   {
