added mix_param and included knowledge state counting

--- a/conin/mediation_variables/apt_experiments-Copy1.ipynb
+++ b/conin/mediation_variables/apt_experiments-Copy1.ipynb
@@ -156,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mismatch at time 65 out of 65\n"
+      "mismatch at time 50 out of 50\n"
      ]
     }
    ],
@@ -173,27 +173,6 @@
    "metadata": {},
    "source": [
     "### Check that Numpy Implementation Gives Same Answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "dd2852bb-e7ec-4114-8c3d-010309ac5972",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14, 14)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apt_params[1].shape"
    ]
   },
   {
@@ -264,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "91e2e0df-387d-4085-809d-7a3664e2b12e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cst_names = ['dummy_constraints']\n",
+    "cst_names = ['dummy_constraint']\n",
     "cst_list=  []\n",
     "for name in cst_names:\n",
     "    module = importlib.import_module(name)\n",
@@ -296,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "11251cc6-a6d3-45c9-86b3-f2f34dd08bf3",
    "metadata": {},
    "outputs": [
@@ -318,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8a60ae0f-0992-4037-ad95-3a3d3f5bb615",
    "metadata": {},
    "outputs": [
@@ -328,7 +307,7 @@
        "<module 'apt_helper' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_helper.py'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6f8ee43d-1459-458e-9373-76391ed7525b",
    "metadata": {},
    "outputs": [],
@@ -349,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8d5480d2-88fd-497c-b760-3e0b960482d4",
    "metadata": {},
    "outputs": [],
@@ -363,33 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "f59b55f2-1826-4c39-956f-b8cf567da9ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm_params, cst_params = ahlp.arrayConvert(hmm,cst_list[0],sat)a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "9f79d665-509e-4634-b793-5861864b8604",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(14.0)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hmm_params[0].sum()"
+    "hmm_params, cst_params = ahlp.arrayConvert(hmm,cst_list[0],sat)"
    ]
   },
   {
